src/tests/testfiles/function-declarations/14.txt
Error at 1:15: ‘void’ must be the only parameter
int foiejfoja(void, void *aaaa);
              ^
Error at 3:15: Parameter has incomplete type
int foiejfoja(void a, void *aaaa) {
              ^
